maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:4: error: value unary_! is not a member of Unit
  while(!end()){ecrire()}
        ^